fixtures/frontend/milestone-2/invalid/custom-source-provider-unknown-option/main.aivi
domain Duration over Int
    literal ms : Int -> Duration

provider custom.feed
    option timeout: Duration
    wakeup: providerTrigger

@source custom.feed with {
    retry: 5ms
}
signal updates : Signal Int
